# nardini

./: .gitignore  README.md  nardine.py  nardini.py  pyproject.toml  requirements.txt  setup.py
nardini/: __main__.py  constants.py  core.py  plotting.py  score_and_plot.py  utils.py  validation.py
